<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/recipe_ingredient_container"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ingredient_description"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxWidth="150dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ingredient_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxWidth="90dp"
        android:text="@string/unit"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_category"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"
        app:layout_constraintTop_toTopOf="@+id/ingredient_category" />

    <com.google.android.material.chip.Chip
        android:id="@+id/ingredient_category"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:ellipsize="end"
        android:maxWidth="80dp"
        android:text="@string/category"
        android:textColor="@color/white"
        app:chipBackgroundColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="@+id/ingredient_description"
        app:layout_constraintStart_toEndOf="@+id/ingredient_description"
        app:layout_constraintTop_toTopOf="@+id/ingredient_description" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/background"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:elevation="0dp"
        android:focusable="true"
        app:backgroundTint="@color/black"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>