<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.AddEditStoreIngredientActivity"
    android:id="@+id/content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ingredient_store_description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:counterEnabled="true"
        android:textColorHint="@color/purple_500"
        app:counterTextColor="@color/white"
        app:boxBackgroundColor="@color/background"
        app:counterMaxLength="30">
    <EditText
        android:id="@+id/ingredientStoreAdd_description"
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/purple_500"
        android:ems="10"
        android:hint="@string/description"
        android:textColor="@color/white"
        android:inputType="text"
        android:maxLength="30"
        android:minHeight="48dp"
         />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/ingredientStoreAdd_amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/purple_500"
        android:ems="10"
        android:hint="@string/amount"
        android:textColor="@color/white"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_store_description_layout" />

    <EditText
        android:id="@+id/ingredientStoreAdd_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientStoreAdd_unit" />

    <EditText
        android:id="@+id/ingredientStoreAdd_bestBefore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/bestBefore"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientStoreAdd_location" />

    <Spinner
        android:id="@+id/ingredientStoreAdd_location"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ingredientStoreAdd_editLocationsBtn"
        app:layout_constraintStart_toEndOf="@+id/ingredientStoreAdd_locationLabel"
        app:layout_constraintTop_toBottomOf="@+id/ingredientStoreAdd_category" />

    <Button
        android:id="@+id/ingredientStoreAdd_cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cancel"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ingredientStoreAdd_editLocationsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editLocations"
        app:layout_constraintBottom_toBottomOf="@+id/ingredientStoreAdd_location"
        app:layout_constraintEnd_toEndOf="@+id/ingredientStoreAdd_category"
        app:layout_constraintTop_toTopOf="@+id/ingredientStoreAdd_location"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <Button
        android:id="@+id/ingredientStoreAdd_confirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm"
        android:backgroundTint="@color/purple_200"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ingredientStoreAdd_locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ingredientStoreAdd_location"
        app:layout_constraintStart_toStartOf="@+id/ingredientStoreAdd_category"
        app:layout_constraintTop_toTopOf="@+id/ingredientStoreAdd_location" />

    <ImageButton
        android:id="@+id/ingredientStoreAdd_editUnitsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="editUnits"
        app:layout_constraintBottom_toBottomOf="@+id/ingredientStoreAdd_unit"
        app:layout_constraintEnd_toEndOf="@+id/ingredientStoreAdd_amount"
        app:layout_constraintTop_toTopOf="@+id/ingredientStoreAdd_unit"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/ingredientStorageAdd_unitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/ingredientStoreAdd_unit"
        app:layout_constraintStart_toStartOf="@+id/ingredientStoreAdd_amount"
        app:layout_constraintTop_toTopOf="@+id/ingredientStoreAdd_unit" />

    <Spinner
        android:id="@+id/ingredientStoreAdd_unit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/ingredientStoreAdd_editUnitsBtn"
        app:layout_constraintStart_toEndOf="@+id/ingredientStorageAdd_unitLabel"
        app:layout_constraintTop_toBottomOf="@+id/ingredientStoreAdd_amount" />


</androidx.constraintlayout.widget.ConstraintLayout>