<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.RecipeAddViewEditActivity">
    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/confetti_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/recipe_image_card"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:elevation="10dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/recipe_title"
            android:focusable="true"
            android:onClick="addPhoto"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        app:counterEnabled="true"
        app:counterTextColor="@color/white"
        android:textColorHint="@color/purple_500"
        app:boxBackgroundColor="@color/background"
        app:counterMaxLength="30">
    <EditText
        android:id="@+id/recipe_title"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/recipe_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/recipe_prep"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/recipe_prep_time"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_image_card" />

    <EditText
        android:id="@+id/recipe_servings"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/recipe_servings"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_prep" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/recipe_comments_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_title_layout"
        app:counterEnabled="true"
        android:textColorHint="@color/purple_500"
        app:counterTextColor="@color/white"
        app:boxBackgroundColor="@color/background"
        app:counterMaxLength="150">
    <EditText
        android:id="@+id/recipe_comments"
        android:layout_width="229dp"
        android:layout_height="254dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:maxLength="150"
        android:textColor="@color/white"
        android:hint="@string/recipe_comments"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/recipe_category"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/recipe_category"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/purple_500"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_servings" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_ingredients_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_comments_layout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recipe_ingredients_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/recipe_ingredients"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recipe_ingredients_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:clickable="true"
        android:backgroundTint="@color/purple_500"
        app:borderWidth="2dp"
        app:tint="@color/white"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_ingredients_text"
        app:layout_constraintStart_toEndOf="@+id/recipe_ingredients_text"
        app:layout_constraintTop_toTopOf="@+id/recipe_ingredients_text"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true"
        android:onClick="addIngredient"
        android:contentDescription="@string/recipe_title" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/cancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/confirm"
        android:onClick="confirm"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>